--- a/website/app/templates/dashboard.html
+++ b/website/app/templates/dashboard.html
@@ -28,7 +28,13 @@
                         <td>Pressione in ingresso:</td>
                         <td>
                             <div class="box_inlet_pressure">
-                                <b>{{i.inlet_pressure}} Bar</b>
+                                <b>
+                                    {% if i.inlet_pressure %}
+                                        <span class="text-success">BUONA</span>
+                                    {% else %}
+                                        <span class="text-danger">BASSA</span>
+                                    {% endif %}
+                                </b>
                             </div>
                         </td>
                     </tr>
@@ -40,7 +46,7 @@
                                     {% if i.inlet_temperature %}
                                         <span class="text-success">BUONA</span>
                                     {% else %}
-                                        <span class="text-danger">PROBLEMATICA</span>
+                                        <span class="text-danger">BASSA</span>
                                     {% endif %}
                                 </b>
                             </div>
@@ -392,13 +398,13 @@ function update_data(){
                 }
 
                 if (installation["inlet_pressure"] === 0){
-                    $('#' + imei + ' .box_inlet_pressure').html('<b><span class="text-danger">PROBLEMATICA</span></b>');
+                    $('#' + imei + ' .box_inlet_pressure').html('<b><span class="text-danger">BASSA</span></b>');
                 } else {
                     $('#' + imei + ' .box_inlet_pressure').html('<b><span class="text-success">BUONA</span></b>');
                 }
 
                 if (installation["inlet_temperature"] === 0){
-                    $('#' + imei + ' .box_inlet_temperature').html('<b><span class="text-danger">PROBLEMATICA</span></b>');
+                    $('#' + imei + ' .box_inlet_temperature').html('<b><span class="text-danger">BASSA</span></b>');
                 } else {
                     $('#' + imei + ' .box_inlet_temperature').html('<b><span class="text-success">BUONA</span></b>');
                 }
